# schemamodels

./: .gitignore  README.md  poetry.lock.license  pyproject.toml  pytest.ini  tests.py  tox.ini
.circleci/: config.yml
.github/: FUNDING.yml
.reuse/: dep5
schemamodel/: __init__.py
schemamodels/: __init__.py  abstract.py  bases.py  dynamic.py  exceptions.py
