[tool.poetry]
name = "schemamodels"
version = "0.1.0"
description = "Dynamically create useful data classes from JSON schemas"
authors = ["'Jurnell Cockhren' <jurnell@civichacker.com>"]
license = "LGPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
ipython = "^8.7.0"
jsonschema = "^4.17.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
